Création des pages de recherche et d'ajout + début de la mise en page

--- a/recherche.html
+++ b/recherche.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Insertion Produit - PRIEZ LEROUX</title>
+    <title>Recherche Produit - Priez Leroux</title>
 </head>
 <body>
     <nav>
@@ -12,10 +12,6 @@
         <a href="./recherche.html" class="navlink">Recherche Données</a>           
     </nav>
 
-    <h1>SAISIR UN NOUVEL ARTICLE</h1>
-
-    <form action="" method="post">
-        <label for=""></label>
-    </form>
+    <h1>RECHERCHE DE PRODUITS</h1>
 </body>
 </html>
