--- a/accueil.html
+++ b/accueil.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Insertion Produit - PRIEZ LEROUX</title>
 </head>
 <body>
     <nav>
-        <a href="./accueil.html" class="navlink">Ajout Données</a>
-        <a href="./recherche.html" class="navlink">Recherche Données</a>           
+        <a href="./accueil.html" class="navlink Myshadow">Ajout Données</a>
+        <a href="./recherche.html" class="navlink Myshadow">Recherche Données</a>           
     </nav>
 
     <h1>SAISIR UN NOUVEL ARTICLE</h1>
 
-    <form action="" method="post">
-        <label for=""></label>
+    <form action="" method="post" class="formInsert">
+        <div class="col-3 divForm">
+            <label for="inputNom" class="col-6 tA_Left">Nom :</label>
+            <input type="text">
+        </div>
+        <div class="col-12 pt-3">
+            <button type="submit" class="Myshadow">ACCEPTER</button>
+        </div>
     </form>
 </body>
 </html>
+
